fix(core): add missing z-index to toaster

--- a/packages/core/src/style.scss
+++ b/packages/core/src/style.scss
@@ -429,6 +429,7 @@ $namespace: "toastup";
   max-height: 100vh;
   position: fixed;
   width: 20em;
+  z-index: 9999;
 
   .#{$namespace}__toast {
     bottom: inherit;
